--- a/Views/Auth/Index.cshtml
+++ b/Views/Auth/Index.cshtml
@@ -1,13 +1,13 @@
 <link rel="stylesheet" href="~/css/login.css">
-<form>
+<form action="Login" method="get">
     <h2>Accedi</h2>
     <div>
-        <label for="email">Username</label>
-        <input type="text" id="email" name="email" required>
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" required>
     </div>
     <div>
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required>
     </div>
-    <button type="submit">Accedi</button>
+    <button type="submit">ACCEDI</button>
 </form>
