riorganizzazione cartelle views e controller

--- a/Views/Auth/Index.cshtml
+++ b/Views/Auth/Index.cshtml
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="~/css/login.css">
-<form action="Login" method="get">
+<form asp-action="Login" method="get">
     <h2>Accedi</h2>
     <div>
         <label for="username">Username</label>
