views correzzione nomi file

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,2 +1,4 @@
-    <a asp-controller="Auth"asp-action="Index">LOGIN </a>  
-    
+<div>
+    benvenuto
+</div>
+<a asp-controller="Auth" asp-action="Index">LOGIN </a>
