--- a/Views/Azienda/ElencoLavoratori.cshtml
+++ b/Views/Azienda/ElencoLavoratori.cshtml
@@ -1,4 +1,4 @@
-
+@model listDipendenteViewModel
     <link rel="stylesheet" href="~/css/elencolavoratori.css">
 
     <div class="search-container">
@@ -18,6 +18,9 @@
             </tr>
         </thead>
         <tbody>
+            @{
+                
+            }
             <tr>
                 <td>Mario</td>
                 <td>Rossi</td>
