--- a/wwwroot/css/elencolavoratori.css
+++ b/wwwroot/css/elencolavoratori.css
@@ -1,5 +1,6 @@
     
     table {
+        background-color: white;
         width: 100%;
         border-collapse: collapse;
         border: 1px solid #ccc;
@@ -12,15 +13,13 @@
         border-bottom: 1px solid #ddd;
     }
     th {
-        background-color: #546b83;
+        background-color: #000000;
         color: white;
         font-weight: bold;
     }
-    tr:nth-child(even) {
-        background-color: #f9f9f9;
-    }
+    
     tr:hover {
-        background-color: #f5f5f5;
+        background-color: rgb(133, 221, 224);
     }
     .search-container {
         display: flex;
@@ -36,7 +35,7 @@
         margin-right: 10px;
     }
     #search-button {
-        background-color: #546b83;
+        background-color: #000000;
         border: none;
         color: #fff;
         padding: 10px 20px;
@@ -45,22 +44,25 @@
         font-size: 16px;
     }
     #search-button:hover {
-        background-color: #84a4ac;
+        background-color: #ffffff;
+        color: black;
     }
     .pagination {
         margin-top: 20px;
         text-align: center;
     }
     .pagination a {
-        color: #000000;
+        color: #ffffff;
         padding: 8px 16px;
         text-decoration: none;
-        border: 1px solid #000000;
+        border: 1px solid  rgb(133, 221, 224);
         border-radius: 4px;
+        background-color: #000000;
     }
     .pagination a:hover {
-        background-color: #546b83;
-        color: white;
+        background-color: rgb(133, 221, 224);
+        color: rgb(0, 0, 0);
+        border-color: #000000;
     }
     .modal {
         display: none;
@@ -71,7 +73,7 @@
         width: 100%;
         height: 100%;
         overflow: auto;
-        background-color: rgba(0,0,0,0.4);
+        background-color: rgba(0, 0, 0, 0.959)
     }
 
     .modal-content {
@@ -108,7 +110,7 @@
     }
 
     .modal-content button {
-        background-color: #4CAF50;
+        background-color: rgb(133, 221, 224);
         color: white;
         padding: 10px 20px;
         border: none;
@@ -117,5 +119,5 @@
     }
 
     .modal-content button:hover {
-        background-color: #45a049;
+        background-color: rgb(133, 221, 224);
     }
