--- a/wwwroot/css/valutazione.css
+++ b/wwwroot/css/valutazione.css
@@ -1,52 +1,125 @@
-.evaluation-form {
-    max-width: 600px;
-    margin: auto;
+.evaluation-form-container {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
+}
+
+.evaluation-form 
+{
+    background-color: #ffffff;
     padding: 20px;
-    border: 1px solid #ccc;
+
     border-radius: 8px;
-    background-color: #f9f9f9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 45%;
 }
+
 .evaluation-form h2 {
-    text-align: center;
+    margin-bottom: 20px;
+    color:  #91bfca;;
 }
+
 .form-group {
     margin-bottom: 15px;
 }
+
 .form-group label {
     display: block;
     margin-bottom: 5px;
+    font-weight: bold;
+    color: #333;
 }
-.form-group input, .form-group select, .form-group textarea {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
+
+.form-group input[type="text"],
+.form-group input[type="date"],
 .form-group textarea {
-    resize: vertical;
+    width: 100%;
+    padding: 10px;
+    margin-top: 6px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.form-group textarea 
+{
     height: 100px;
+
 }
-.form-group .rating {
-    display: flex;
-    justify-content: space-between;
-}
-.form-group .rating input {
-    width: auto;
-}
-.form-group .rating label {
-    margin-right: 10px;
-}
-.form-group .rating label:last-child {
-    margin-right: 0;
-}
+
 .form-actions {
     text-align: center;
 }
+
 .form-actions button {
+    background-color: #000000;
+    color: white;
     padding: 10px 20px;
     border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: #fff;
+    border-radius: 5px;
     cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+.form-actions button:hover {
+    background-color: #000000;
+    color: white;
+}
+
+.rating {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.rating label {
+    margin-right: 10px;
+}
+
+.rating input[type="radio"] {
+    margin: 0 5px;
+}
+th, td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+th {
+    background-color: #000000;
+    color: white;
+    font-weight: bold;
+}
+
+tr:hover {
+    background-color: rgb(133, 221, 224);
+}
+.search-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+#search {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    margin-right: 10px;
+}
+#search-button {
+    background-color: #000000;
+    border: none;
+
+
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+#search-button:hover {
+    background-color: #ffffff;
+    color: black;
 }
