add primaVersione funzioante lato azienda (elemco lavoratori)

--- a/Views/Azienda/ElencoLavoratori.cshtml
+++ b/Views/Azienda/ElencoLavoratori.cshtml
@@ -17,7 +17,7 @@
              @foreach (DipendenteViewModel dipendente in Model.Dipendenti)
                 {
                     <tr>
-                        <td>@dipendente.Id</td>
+                        <td>@dipendente.IdDipendente</td>
                         <td>@dipendente.Nome</td>
                         <td>@dipendente.Cognome</td>
                         <td>@dipendente.Email</td>
