--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,8 +11,7 @@
         <title>@ViewData["Title"]</title>
         <link rel="stylesheet" href="~/css/style.css">
     </head>
-
-    <body>
+<body>
         <div class="topnav">
             <a asp-action="ElencoLavoratori" asp-controller="Azienda">Elenco
                 <br>
@@ -46,7 +45,7 @@
     </html>
 
 }
-else if (Model is DipendenteViewModel)
+else if (Model is DipendenteViewModel || @Accessor.HttpContext.Session.GetString("TipoUtente") == "dipendente" )
 {
     <!DOCTYPE html>
     <html lang="it">
